--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
@@ -31,7 +31,7 @@
     "@nestjs/terminus": "^10.1.1",
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/typeorm": "^10.0.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
@@ -42,6 +42,7 @@
     "mysql2": "^3.6.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -51,14 +52,14 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/bcryptjs": "^2.4.5",
+    "@types/bcrypt": "^5.0.1",
     "@types/cookie-parser": "^1.4.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/passport-jwt": "^3.0.9",
-    "@types/passport-local": "^1.0.37",
     "@types/passport-google-oauth20": "^2.0.13",
+    "@types/passport-jwt": "^3.0.12",
+    "@types/passport-local": "^1.0.37",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
