--- a/DockerFile
+++ b/DockerFile
@@ -20,6 +20,8 @@ FROM node:18-alpine
 WORKDIR /app
 ENV PORT=3000
 ENV NODE_ENV=Production
+COPY --from=builder /app/.env ./
+COPY --from=builder /app/tsconfig.json ./
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/node_modules ./node_modules
