--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: '3.8'
 services:
   # app service for your backend
   app:
-    container_name: nestjs-template
+    container_name: nestjs-app
     build:
       context: ./
       dockerfile: Dockerfile
@@ -15,27 +15,28 @@ services:
       - .:/app
       - /app/node_modules
     environment:
-      DATABASE_NAME: nestjs-template-db
-      DATABASE_USER: admin
-      DATABASE_PASSWORD: password
-      DB_URI: mongodb://database:27017
+      DATABASE_NAME: nestjs_template
+      DATABASE_USER: root
+      DATABASE_PASSWORD: root
+      DATABASE_PORT: 3306
+      DATABASE_HOST: host.docker.internal
     ports:
-      - '5000:5000'
+      - '3000:3000'
     depends_on:
       - database
 
-  # start the mongodb service as container
+  # start the mysql service as container
   database:
-    image: mongo:latest
-    container_name: nestjs-template-mongodb
+    image: mysql:latest
+    container_name: mysql
     restart: always
     ports:
-      - '27019:27018'
+      - '3306:3306'
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password
+      MYSQL_DATABASE: 'nestjs_template'
+      MYSQL_ROOT_PASSWORD: 'root'
     volumes:
-      - mongodb_data_container:/data/db
+      - nestjs_container:/var/lib/mysql
 
 volumes:
-  mongodb_data_container:
+  nestjs_container:
