--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: '3.8'
 services:
   # app service for your backend
   app:
-    container_name: nestjs-app
+    container_name: app
     build:
       context: ./
       dockerfile: Dockerfile
@@ -15,28 +15,47 @@ services:
       - .:/app
       - /app/node_modules
     environment:
-      DATABASE_NAME: nestjs_template
-      DATABASE_USER: root
-      DATABASE_PASSWORD: root
-      DATABASE_PORT: 3306
-      DATABASE_HOST: host.docker.internal
+      SQL_DATABASE_NAME: nestjs_mysql
+      SQL_DATABASE_USER: root
+      SQL_DATABASE_PASSWORD: root
+      SQL_DATABASE_PORT: 3306
+      SQL_DATABASE_HOST: host.docker.internal
+      MONGO_DATABASE_NAME: nestjs_mongodb
+      MONGO_DATABASE_USER: admin
+      MONGO_DATABASE_PASSWORD: password
+      MONGO_DATABASE_URI: mongodb://mongodb:27017
     ports:
       - '3000:3000'
     depends_on:
-      - database
+      - mysql
+      - mongo
 
   # start the mysql service as container
-  database:
+  mysql:
     image: mysql:latest
     container_name: mysql
     restart: always
     ports:
       - '3306:3306'
     environment:
-      MYSQL_DATABASE: 'nestjs_template'
+      MYSQL_DATABASE: 'nestjs_mysql'
       MYSQL_ROOT_PASSWORD: 'root'
     volumes:
-      - nestjs_container:/var/lib/mysql
+      - mysql_container:/var/lib/mysql
+
+  # start the mongo service as container
+  mongo:
+    image: mongo:latest
+    container_name: mongodb
+    restart: always
+    ports:
+      - '27018:27017'
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - mongodb_data_container:/data/db
 
 volumes:
-  nestjs_container:
+  mysql_container:
+  mongodb_data_container:
